added html and css
structure, 0’d out web browser styles, added background and divs to html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<link type="text/css" rel="stylesheet" href="main.css">
+	<link type="text/css" rel="stylesheet" href="animations.css">
+	</head>
 <body>
+  <div class="header">
+
+  </div>
+
+  <div class="tagline">
+
+  </div>
+  
 
 </body>
 </html>
