working on bkgrnd image added heading

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 	</head>
 <body>
   <div class="header">
-
+    <h1>TJs Welding</h1>
   </div>
 
   <div class="tagline">
 
   </div>
-  
+
 
 </body>
 </html>
