--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
 	<link type="text/css" rel="stylesheet" href="animations.css">
 	</head>
 <body>
+
+  <div class="nav">
+    <ul>
+    <li><a class="active" href="#home">Home</a></li>
+    <li><a href="#news">News</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="#about">About</a></li>
+  </ul>
+    <div>
   <div class="header">
     <h1>TJs Welding</h1>
   </div>
 
   <div class="tagline">
-
+    <h2>We have a fully equipped shop as well as a completely self contained and fully equipped mobile unit.</h2>
   </div>
+
+
 
 
 </body>
