--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
 	</head>
 <body>
 
+  <div class="logo">
+    <img src="/Users/Deb/Documents/tjswelding/img/logo.png">
+  </div>
+
   <div class="nav">
     <ul>
     <li><a class="active" href="#home">Home</a></li>
-    <li><a href="#news">News</a></li>
-    <li><a href="#contact">Contact</a></li>
-    <li><a href="#about">About</a></li>
+    <li><a href="#service">Services</a></li>
+    <li><a href="#projects">Projects</a></li>
+    <li><a href="#gallery">Gallery</a></li>
+    <li><a href="#locations">Locations</a></li>
+    <li><a href="#company">Company</a></li>
+    <li><a href="#getaquote">Get A Quote</a></li>
   </ul>
     <div>
-  <div class="header">
-    <h1>TJs Welding</h1>
-  </div>
 
   <div class="tagline">
     <h2>We have a fully equipped shop as well as a completely self contained and fully equipped mobile unit.</h2>
