--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <li><a href="#locations">Locations</a></li>
     <li><a href="#company">Company</a></li>
     <li><a href="#getaquote">Get A Quote</a></li>
+    <li class="phone"><a href=#phone#>575-491-1392</a></li>
   </ul>
     <div>
 
