tagline color and border sizing

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
     <div>
 
   <div class="tagline">
-    <h2>We have a fully equipped shop as well as a completely self contained and fully equipped mobile unit.</h2>
+    <h2>CUSTOM WELDING</h2>
   </div>
+
+
 
 
 
