added copy and services page linked home and services

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="nav">
     <ul>
     <li><a class="active" href="#home">Home</a></li>
-    <li><a href="#service">Services</a></li>
+    <li><a href="file:///Users/Deb/Documents/tjswelding/services.html">Services</a></li>
     <li><a href="#projects">Projects</a></li>
     <li><a href="#gallery">Gallery</a></li>
     <li><a href="#locations">Locations</a></li>
@@ -24,8 +24,17 @@
     <div>
 
   <div class="tagline">
-    <h2>CUSTOM WELDING</h2>
+    <h2>CUSTOM<br>WELDING</h2>
   </div>
+
+  <div class="tagline2">
+    <h2>We have a fully equipped shop as well as a completely self-contained and fully equipped mobile unit.</h2>
+  </div>
+
+  <div class="footer">
+    <footer>&copy; Copyright 2017 debadeogba</footer>
+
+</div>
 
 
 
