--- a/gallery.html
+++ b/gallery.html
@@ -1,12 +1,11 @@
 <div class="nav">
   <ul>
-  <li><a class="active" href="file:///Users/Deb/Documents/tjswelding/index.html">Home</a></li>
-  <li><a href="#service">Services</a></li>
-  <li><a href="#projects">Projects</a></li>
-  <li><a href="#gallery">Gallery</a></li>
-  <li><a href="#locations">Locations</a></li>
-  <li><a href="#company">Company</a></li>
-  <li><a href="#getaquote">Get A Quote</a></li>
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="file:///Users/Deb/Documents/tjswelding/services.html">Services</a></li>
+  <li><a href="file:///Users/Deb/Documents/tjswelding/gallery.html">Gallery</a></li>
+  <li><a href="file:///Users/Deb/Documents/tjswelding/locations.html">Locations</a></li>
+  <li><a href="file:///Users/Deb/Documents/tjswelding/company.html">Company</a></li>
+  <li><a href="file:///Users/Deb/Documents/tjswelding/getaquote.html">Get A Quote</a></li>
   <li class="phone"><a href=#phone#>575-491-1392</a></li>
 </ul>
   <div>
