--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <ul>
     <li><a class="active" href="#home">Home</a></li>
     <li><a href="file:///Users/Deb/Documents/tjswelding/services.html">Services</a></li>
-    <li><a href="#gallery">Gallery</a></li>
-    <li><a href="#locations">Locations</a></li>
-    <li><a href="#company">Company</a></li>
-    <li><a href="#getaquote">Get A Quote</a></li>
+    <li><a href="file:///Users/Deb/Documents/tjswelding/gallery.html">Gallery</a></li>
+    <li><a href="file:///Users/Deb/Documents/tjswelding/locations.html">Locations</a></li>
+    <li><a href="file:///Users/Deb/Documents/tjswelding/company.html">Company</a></li>
+    <li><a href="file:///Users/Deb/Documents/tjswelding/getaquote.html">Get A Quote</a></li>
     <li class="phone"><a href=#phone#>575-491-1392</a></li>
   </ul>
     <div>
