--- a/services.html
+++ b/services.html
@@ -1,11 +1,27 @@
-<div class="nav">
-  <ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="file:///Users/Deb/Documents/tjswelding/services.html">Services</a></li>
-  <li><a href="file:///Users/Deb/Documents/tjswelding/gallery.html">Gallery</a></li>
-  <li><a href="file:///Users/Deb/Documents/tjswelding/locations.html">Locations</a></li>
-  <li><a href="file:///Users/Deb/Documents/tjswelding/company.html">Company</a></li>
-  <li><a href="file:///Users/Deb/Documents/tjswelding/getaquote.html">Get A Quote</a></li>
-  <li class="phone"><a href=#phone#>575-491-1392</a></li>
-</ul>
-  <div>
+<!DOCTYPE html>
+<html>
+<head>
+	<link type="text/css" rel="stylesheet" href="main.css">
+	<link type="text/css" rel="stylesheet" href="animations.css">
+	</head>
+<body>
+
+  <div class="logo">
+    <img src="/Users/Deb/Documents/tjswelding/img/logo.png">
+  </div>
+
+  <div class="nav">
+    <ul>
+    <li><a class="active" href="#home">Home</a></li>
+    <li><a href="file:///Users/Deb/Documents/tjswelding/services.html">Services</a></li>
+    <li><a href="file:///Users/Deb/Documents/tjswelding/getaquote.html">Get A Quote</a></li>
+    <li class="phone"><a href=#phone#>575-491-1392</a></li>
+  </ul>
+    <div>
+
+
+
+  <div class="footer">
+    <footer>&copy; Copyright 2017 debadeogba</footer>
+
+</div>
