--- a/index.html
+++ b/index.html
@@ -6,18 +6,30 @@
 	</head>
 <body>
 
+	<div class="header">
+<h1>TJ's Welding</h1>
+	</div>
+
   <div class="logo">
     <img src="/Users/Deb/Documents/tjswelding/img/logo.png">
   </div>
 
-  <div class="nav">
-    <ul>
-    <li><a class="active" href="#home">Home</a></li>
-    <li><a href="file:///Users/Deb/Documents/tjswelding/services.html">Services</a></li>
-    <li><a href="file:///Users/Deb/Documents/tjswelding/getaquote.html">Get A Quote</a></li>
-    <li class="phone"><a href=#phone#>575-491-1392</a></li>
-  </ul>
-    <div>
+
+<div class="tagline">
+We have a fully equipped shop as well as a completely self-contained and fully equipped mobile unit.
+	<div>
+
+
+			<div id="slider">
+			<figure>
+			<img src="/Users/Deb/Documents/tjswelding/img/tjwelding.jpg" alt>
+			<img src="/Users/Deb/Documents/tjswelding/img/tophwelding.jpg" alt>
+			<img src="/Users/Deb/Documents/tjswelding/img/welding1.jpg" alt>
+			<img src="/Users/Deb/Documents/tjswelding/img/weldingrig.jpg" alt>
+			<img src="/Users/Deb/Documents/tjswelding/img/weldingrig2.jpg" alt>
+			<img src="/Users/Deb/Documents/tjswelding/img/weldingrig3.jpg" alt>
+			</figure>
+			</div>
 
 
 
