--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
 We have a fully equipped shop as well as a completely self-contained and fully equipped mobile unit.
 	<div>
 
+		<ul class="topnav" id="myTopnav">
+		  <li><a href="#home">Home</a></li>
+		  <li><a href="#news">Services</a></li>
+		  <li><a href="#contact">Contact</a></li>
+		  <li><a href="#about">About</a></li>
+		  <li class="icon">
+		    <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
+		  </li>
+		</ul>
+
 			<div id="slider">
 			<figure>
 			<img src="/Users/Deb/Documents/tjswelding/img/tjwelding.jpg" alt>
